# ld50-heute-nicht

./: .gitmodules  Cargo.toml
assets/: clubmate.mtl  enemy.1.mtl  menu.glb  player.mtl
src/: main.rs
